fixed letter spacing and code link for password gen

--- a/src/index.css
+++ b/src/index.css
@@ -460,6 +460,7 @@ nav a:hover {
 @media screen and (max-width: 415px) {
   .intro h1 {
     line-height: 2.2rem;
+    letter-spacing: .1rem;
   }
   .header {
     padding-right: 3%;
